<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.LoginActivity"

    >


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="200dp"
        android:background="@drawable/bulldog"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonProfile"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:text="@string/user_profile"
            android:drawableLeft="@drawable/myprofile"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonTrivia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:drawableLeft="@drawable/triviagame"
            android:text="@string/trivia_game" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonCancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:drawableLeft="@drawable/aboutcancer"
            android:text="@string/what_is_cancer" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonForum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:drawableLeft="@drawable/forum"
            android:text="@string/forum" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonSnake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:drawableLeft="@drawable/snake"
            android:text="@string/snake_game" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>

