<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/organosmen"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.AboutCancerActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonBrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/BrainCancer"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_weight="1"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatBreast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="200dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/BreastCancer"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_weight="2"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatMelanoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="250dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/MelanomaCancer"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="3"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatSkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="250dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/SkinCancer"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="4"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>

